Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
Operating System: ReactOS
Platform: x86 Hardware
-
October (0.3.15 first half)
-
7298
Description
The user mode assert() implementation shows a dialog box to the user on failure with three buttons
Abort: this should close the program (and does, but usually shows more error messages... another bug I guess)
Retry: this should break into the debugger. It doesn't. It just raises the assertion again
Ignore: probably works, but who wants that ![]()