[CRT] - Use __debugbreak in _assert when user presses ignore in the message box - Implement __crt_MessageBoxA and use it from _assert and abort - Rewrite abort and _set_abort_behavior - Add function headers and set BSD license for my code - CORE-6594 #resolve

svn path=/trunk/; revision=58143